adds comment system boilerplate
